<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:gravity="center"
      android:orientation="vertical"
      tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_toolbar"
        style="@style/text_button"/>

    <TextView
        android:id="@+id/activity_toolbar_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_toolbar_fragment"
        style="@style/text_button"/>

    <TextView
        android:id="@+id/activity_toolbar_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_toolbar_tabs"
        style="@style/text_button"/>

    <TextView
        android:id="@+id/fragment_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_recyclerview"
        style="@style/text_button"/>

    <TextView
        android:id="@+id/fragment_recyclerview_ptr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_recyclerview_ptr"
        style="@style/text_button"/>

  </LinearLayout>
</ScrollView>